src/examples/test-doubles/ReturnMapExampleTest.php.out
./tools/phpunit tests/ReturnMapExampleTest.php
PHPUnit 11.2.0 by Sebastian Bergmann and contributors.

Runtime:       PHP 8.3.8

E                                                                   1 / 1 (100%)

Time: 00:00, Memory: 22.90 MB

There was 1 error:

1) ReturnMapExampleTest::testReturnMapStub
PHPUnit\Framework\MockObject\Generator\ClassIsFinalException: Class "SomeClass" is declared "final" and cannot be doubled

/path/to/tests/ReturnMapExampleTest.php:9

ERRORS!
Tests: 1, Assertions: 0, Errors: 1.
